建群时，加入自己